# litert-test

./: .gitignore  README.md  download_and_run_litert_model.py  download_assets.py  pyproject.toml
src/litert_test/: __init__.py  asset_downloader.py  model_runner.py
