[project]
name = "litert-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tohboeh5", email = "" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.4",
]

[project.scripts]
litert-test = "litert_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250611",
]
